  tries to derive global boundchanges and also to shorten this set of variables by using cliqe, implication and variable
  bound information
- removed all message length parameters in message.c and for printing error messages (not needed anymore)
- new methods SCIPgetFirstLP{Dual/Lower}boundRoot() which return the value of the first LP solved at the root node

parameters:
- new parameter <lp/disablecutoff> (default FALSE), by which the LP cutoff bound can be disabled (when set to TRUE)
- new parameter <separating/gomory/sidetypebasis> to decide whether the sides of ranged rows should be determined from
  the basis status
- new parameter <write/allconss> to enable that all constraints are written
- new parameter <constraints/indicator/scaleslackvar> for scaling of the slack variable in indicator constraints
- added <conflict/maxvarsdetectimpliedbounds> parameter to decide whether the a valid conflict of what maximal length
  will be used to derive global bound changes
- added <conflict/fullshortenconflict> parameter to decide whether we want to stop shortening a conflict set, when no
  global bound changes can be found anymore
- changed default max coefficient for big-M constraint to be initial from 1e6 to 1e9
- changed default reliability branching parameter DEFAULT_MAXLOOKAHEAD from 8 to 9, that increases the number of further
  variables evaluated without better score
- changed default gomory cut separation parameter DEFAULT_MAXRANK from 0 to 3, to take also gomory cuts, that could not
  be scaled to integral coefficients, with maximal rank 3 into account

core:
- added presolve.{c,h} which should be used for all preprocessing mechanisms executed from within SCIP, corresponding to
  solve.{c,h}, and also for presprocessing methods which can be called from different plugins or from the core to avoid
  code doubling
- the main output routine of message.c (bufferMessage - now handleMessage) has been rewritten: it now does not need